--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 server:
   port: 9090
 
+#  servlet:
+#    session:
+#      timeout: 30m # 세션 유효 시간 30분
   servlet:
     session:
-      timeout: 30m # 세션 유효 시간 30분
+      timeout: 30m  # 세션 유지 시간 30분
+    cookie:
+      same-site: none  # 필요시 설정
 
 spring:
   datasource:
