--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 server:
   port: 9090
 
-#  servlet:
-#    session:
-#      timeout: 30m # 세션 유효 시간 30분
   servlet:
     session:
-      timeout: 30m  # 세션 유지 시간 30분
-    cookie:
-      same-site: none  # 필요시 설정
+      cookie:
+        same-site: none  # SameSite 설정
+        secure: false     # 로컬 환경에서는 false로 설정
+        http-only: true
+    timeout: 30m
 
 spring:
   datasource:
