--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -15,11 +15,7 @@ spring:
     username: root
     password: blackrose12
     driver-class-name: com.mysql.cj.jdbc.Driver
-  #  datasource:
-  #    url: jdbc:h2:tcp://localhost/~/PetCare
-  #    username: sa
-  #    password:
-  #    driver-class-name: org.h2.Driver
+
   # Page Reload
   thymeleaf:
     prefix: "classpath:/templates/"
@@ -76,13 +72,23 @@ springdoc:
     path: /swagger-ui.html
   paths-to-match: /api/**
 
+#profileUpload:
+#  path: /home/ubuntu/petscare/uploads/profile/
+#
+#petsUpload:
+#  path: /home/ubuntu/petscare/uploads/pets/
+#
+#carelogsUpload:
+#  path: /home/ubuntu/petscare/uploads/carelogs/
+
 profileUpload:
-  path: /home/ubuntu/petscare/uploads/profile/
+  path: ${PROFILE_UPLOAD_PATH}
 
 petsUpload:
-  path: /home/ubuntu/petscare/uploads/pets/
+  path: ${PETS_UPLOAD_PATH}
 
 carelogsUpload:
-  path: /home/ubuntu/petscare/uploads/carelogs/
+  path: ${CARELOGS_UPLOAD_PATH}
+
 
 
