--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,12 +15,18 @@ spring:
     username: root
     password: blackrose12
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  #  datasource:
+  #    url: jdbc:h2:tcp://localhost/~/PetCare
+  #    username: sa
+  #    password:
+  #    driver-class-name: org.h2.Driver
   # Page Reload
   thymeleaf:
-    prefix: "classpath:/templates/"
-      suffix: ".html"
-      cache: true
+    prefix: "file:src/main/resources/templates/"
+    cache: false
+
+  config:
+    import: classpath:/application-dev.yml
 
   logging:
     level:
@@ -70,10 +76,11 @@ springdoc:
   paths-to-match: /api/**
 
 profileUpload:
-  path: /home/ubuntu/petscare/uploads/profile/
+  path: /Users/idohyeon/petcare-uploads/profile/
 
 petsUpload:
-  path: /home/ubuntu/petscare/uploads/pets/
+  path: /Users/idohyeon/petcare-uploads/pets/
 
 carelogsUpload:
-  path: /home/ubuntu/petscare/uploads/carelogs/
+  path: /Users/idohyeon/petcare-uploads/carelogs/
+
