--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -16,6 +16,12 @@ spring:
     password: blackrose12
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+  #  datasource:
+  #    url: jdbc:h2:tcp://localhost/~/PetCare
+  #    username: sa
+  #    password:
+  #    driver-class-name: org.h2.Driver
+
   # Page Reload
   thymeleaf:
     prefix: "file:src/main/resources/templates/"
