--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -56,6 +56,9 @@ spring:
       filter:
         enabled: true
 
+  jackson:
+    time-zone: Asia/Seoul
+
 logging.level:
   org.hibernate.SQL: debug  # 하이버네이트가 생성하는(SQL, JPA) 동작들이 로그로 찍혀서 모두 보임.
   org.hibernate.orm.jdbc.bind: trace
