--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -60,6 +60,43 @@ spring:
   jackson:
     time-zone: Asia/Seoul
 
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            redirect-uri: "http://ec2-3-36-128-60.ap-northeast-2.compute.amazonaws.com:9090/login/oauth2/code/google"
+            scope:
+              - profile
+              - email
+            issuer: "https://accounts.google.com"  # 구글 발급자 설정
+          kakao:
+            client-authentication-method: client_secret_post
+            redirect-uri: "http://ec2-3-36-128-60.ap-northeast-2.compute.amazonaws.com:9090/login/oauth2/code/kakao"
+            authorization-grant-type: authorization_code
+            scope: profile_nickname, account_email
+            client-name: Kakao
+            provider: kakao
+            issuer: "https://kauth.kakao.com"  # 카카오 발급자 설정
+          naver:
+            redirect-uri: "http://ec2-3-36-128-60.ap-northeast-2.compute.amazonaws.com:9090/login/oauth2/code/naver"
+            authorization-grant-type: authorization_code
+            scope: name, email, mobile
+            client-name: Naver
+            provider: naver
+            issuer: "https://nid.naver.com"  # 네이버 발급자 설정
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
 logging.level:
   org.hibernate.SQL: debug  # 하이버네이트가 생성하는(SQL, JPA) 동작들이 로그로 찍혀서 모두 보임.
   org.hibernate.orm.jdbc.bind: trace
