--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -107,6 +107,10 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+  redis:
+    host: localhost
+    port: 6379
+
 logging.level:
   org.hibernate.SQL: debug  # 하이버네이트가 생성하는(SQL, JPA) 동작들이 로그로 찍혀서 모두 보임.
   org.hibernate.orm.jdbc.bind: trace
