--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -103,6 +103,10 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+  redis:
+    host: ec2-3-36-128-60.ap-northeast-2.compute.amazonaws.com
+    port: 6379
+
 logging.level:
   org.hibernate.SQL: debug  # 하이버네이트가 생성하는(SQL, JPA) 동작들이 로그로 찍혀서 모두 보임.
   org.hibernate.orm.jdbc.bind: trace
