--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -103,6 +103,13 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
 
+  # EC2에 설치한 일반 Redis 서버
+  # 포트: 6379
+  # 통신: 암호화되지 않은 평문(Plaintext) 통신
+  # TLS 설정: 직접 stunnel, redis-server.conf 등의 추가 설정 없이는 비활성화 상태
+  # 즉, ssl: true를 설정하면 Spring (또는 Lettuce 클라이언트)은 TLS 핸드셰이크를 시도하게 되는데, Redis 서버는 TLS를 아예 지원하지 않기 때문에 프로토콜 충돌로 다음과 같은 오류가 발생.
+  # Redis 6 이상에서는 redis.conf에 TLS 관련 설정 (tls-port, tls-cert-file, tls-key-file, 등) 명시
+  # 일반 redis-cli 와 같이 평문으로 접속이 되면 TLS(SSL) 사용하지 않은 경우.
   redis:
     host: ec2-3-36-128-60.ap-northeast-2.compute.amazonaws.com
     port: 6379
