--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -110,6 +110,7 @@ spring:
   # 즉, ssl: true를 설정하면 Spring (또는 Lettuce 클라이언트)은 TLS 핸드셰이크를 시도하게 되는데, Redis 서버는 TLS를 아예 지원하지 않기 때문에 프로토콜 충돌로 다음과 같은 오류가 발생.
   # Redis 6 이상에서는 redis.conf에 TLS 관련 설정 (tls-port, tls-cert-file, tls-key-file, 등) 명시
   # 일반 redis-cli 와 같이 평문으로 접속이 되면 TLS(SSL) 사용하지 않은 경우.
+  # Redis 6+에서 ACL을 사용하고 있을 경우 username: 이렇게 설정해도 됨.(본인은 따로 Redis 설정 클래스에서 수동으로 설정함.)
   redis:
     host: ec2-3-36-128-60.ap-northeast-2.compute.amazonaws.com
     port: 6379
