--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'    // redis 의존성
     implementation 'org.apache.commons:commons-pool2' // Redis 연결 풀(optional but recommended)
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
