--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -112,7 +112,7 @@ spring:
   # 일반 redis-cli 와 같이 평문으로 접속이 되면 TLS(SSL) 사용하지 않은 경우.
   # Redis 6+에서 ACL을 사용하고 있을 경우 username: 이렇게 설정해도 됨.(본인은 따로 Redis 설정 클래스에서 수동으로 설정함.)
   redis:
-    host: http://petscarebook.com
+    host: petscarebook.com
     port: 6379
     password: blackrose12
     ssl: false
