--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://repo.osgeo.org/repository/release/"
+    }
+    maven {
+        url "https://maven.java.net/content/groups/public/"
+    }
 }
 
 dependencies {
@@ -42,6 +48,21 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    implementation 'com.opencsv:opencsv:5.7.1'  // CSV 파싱 라이브러리
+
+    implementation('org.geotools:gt-main:25.2') {
+        exclude group: 'javax.media', module: 'jai_core'
+    }
+    implementation('org.geotools:gt-referencing:25.2') {
+        exclude group: 'javax.media', module: 'jai_core'
+    }
+    implementation('org.geotools:gt-epsg-hsql:25.2') { // 좌표계 정의용 DB
+        exclude group: 'javax.media', module: 'jai_core'
+    }
+    implementation('org.geotools:gt-metadata:25.2') { // CRS 파싱 관련
+        exclude group: 'javax.media', module: 'jai_core'
+    }
 
     // Querydsl 추가
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
