-개발 환경 yml 설정 파일(petHospitalUpload path 추가)

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -134,3 +134,5 @@ petsUpload:
 carelogsUpload:
   path: /Users/idohyeon/petcare-uploads/carelogs/
 
+petHospitalUpload:
+  path: /Users/idohyeon/petcare-uploads/petHospital/
