-배포 서버 환경 yml 설정 파일(petHospitalUpload path 추가)

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -138,3 +138,6 @@ petsUpload:
 
 carelogsUpload:
   path: /home/ubuntu/petscare/uploads/carelogs/
+
+petHospitalUpload:
+  path: /home/ubuntu/petscare/uploads/petHospital/
