--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0' // 쿼리 파라미터 외부 라이브러리
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0' // springdoc openapi(swagger api)
     implementation 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'    // redis 의존성
     implementation 'org.apache.commons:commons-pool2' // Redis 연결 풀(optional but recommended)
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
