-개발 환경 yml 설정 파일(캐싱 로그 레벨 설정 추가)

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -37,6 +37,11 @@ spring:
       org:
         springframework:
           web: DEBUG  # Spring 웹 관련 로그도 DEBUG 레벨로 출력됩니다.
+          cache: DEBUG
+          data:
+            redis:
+              cache:
+                RedisCache: DEBUG
     pattern:
       console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"  # 로그 출력 형식 설정
   output:
